# vscode-workspaces-editor

./: .gitignore  Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
plans/: zed_default_profile.md
scripts/cli/: install_linux.sh  install_macos.sh  install_windows.ps1
scripts/gui/: install_linux.sh  install_macos.sh  install_windows.ps1
src/: lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  build-release-assets.js  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.ppm  icon.icns
src-tauri/src/: main.rs
src-ui/: app.js  index.html  package.json  pnpm-lock.yaml  styles.css  svelte.config.js  tsconfig.json  vite.config.ts
src-ui/src/: App.svelte  app.d.ts  main.ts  types.ts
src/cli/: mod.rs
src/tui/: app.rs  autocomplete.rs  input_handler.rs  mod.rs  models.rs  ui.rs
src/workspaces/: database.rs  error.rs  mod.rs  models.rs  parser.rs  paths.rs  storage.rs  utils.rs  zed.rs
