[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "vscode-workspaces-editor"
version = "1.0.7" #app-version
edition = "2021"
description = "VSCode workspace editor with desktop and terminal interfaces"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
home = "0.5"
directories = "5.0"
tokio = { version = "1.32", features = ["full"] }
log = "0.4"
env_logger = "0.10"
glob = "0.3"
chrono = "0.4"
urlencoding = "2.1"
uuid = { version = "1.15.1", features = ["v4"] }
ctrlc = { version = "3.4", features = ["termination"] }
unicode-width = "0.1.10"

[dependencies.tauri]
version = "2.0.0"
features = []

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[[bin]]
name = "vscode-workspaces-editor"
path = "src/main.rs"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
